--- a/index.html
+++ b/index.html
@@ -3,12 +3,27 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
+  <title>Snap2Know</title>
+  <script src="https://cdn.tailwindcss.com"></script>
   <link href='/style.css' rel='stylesheet'>
 </head>
-<body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
+<body class="bg-gray-900 text-white flex flex-col items-center justify-center min-h-screen">
+  <div class="container mx-auto p-4 flex flex-col items-center">
+    <h1 class="text-4xl md:text-6xl font-bold mb-8">Snap2Know</h1>
+    
+    <div id="camera-container" class="relative w-full max-w-lg mb-4">
+        <video id="camera-stream" autoplay class="w-full h-auto rounded-lg shadow-lg" style="display:none;"></video>
+        <canvas id="photo-canvas" class="w-full h-auto rounded-lg shadow-lg" style="display:none;"></canvas>
+    </div>
+
+    <div id="button-container" class="flex space-x-4">
+      <button id="start-button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full transition duration-300">Start</button>
+      <button id="capture-button" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full transition duration-300" style="display:none;">Capture</button>
+      <button id="cancel-button" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-full transition duration-300" style="display:none;">Cancel</button>
+      <button id="proceed-button" class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded-full transition duration-300" style="display:none;">Proceed</button>
+      <button id="retake-button" class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded-full transition duration-300" style="display:none;">Retake</button>
+    </div>
+  </div>
   <script defer type="text/javascript" src="/main.js"></script>
 </body>
 </html>
