--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Snap2Know</title>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q2SWXTR93S"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-Q2SWXTR93S');
+  </script>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href='/style.css' rel='stylesheet'>
 </head>
@@ -27,7 +36,8 @@
 
     <!-- Device Information Section (Initially Hidden) -->
     <div id="device-information-section" class="mt-12 w-full max-w-4xl" style="display: none;">
-        <h2 class="text-3xl font-bold mb-8 text-center">Delux M700 Mouse</h2>
+        <h2 class="text-3xl font-bold mb-2 text-center">Delux M700 Mouse</h2>
+        <p id="recognized-object" class="text-center text-sm mb-8"></p>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
             <info-card card-id="readiness-checklist" title="Readiness Checklist"></info-card>
             <info-card card-id="quick-start-guides" title="Quick Start Guides"></info-card>
